force-app/main/default/objects/BMCServiceDesk__Service_Target_Criteria__c/BMCServiceDesk__Service_Target_Criteria__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for service target criteria conditions.</description>
    <label>Service Target Criteria</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Service Target Criteria #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Target Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>