force-app/main/default/objects/BMCServiceDesk__Service_Target_Criteria__c/fields/BMCServiceDesk__Field_Info__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Field_Info__c</fullName>
    <description>This field stores the API Name of the field on which ST criteria is defined.</description>
    <label>Field Info</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>