force-app/main/default/objects/BMCServiceDesk__Service_Target_Criteria__c/fields/BMCServiceDesk__FKService_Target__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKService_Target__c</fullName>
    <label>Service Target</label>
    <referenceTo>BMCServiceDesk__Service_Target__c</referenceTo>
    <relationshipLabel>Service Target Criteria</relationshipLabel>
    <relationshipName>Service_Target_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>