force-app/main/default/objects/BMCServiceDesk__Service_Target_Criteria__c/fields/BMCServiceDesk__Grouping_Operator__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Grouping_Operator__c</fullName>
    <description>This field stores Logical Operators (1 for AND, 0 for OR).</description>
    <label>Grouping Operator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>