force-app/main/default/objects/BMCServiceDesk__Service_Target_Criteria__c/fields/BMCServiceDesk__Operand__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Operand__c</fullName>
    <description>This field stores the value of ST criteria condtiion.</description>
    <label>Operand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>