force-app/main/default/objects/BMCServiceDesk__Service_Target_Criteria__c/fields/BMCServiceDesk__Operator__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Operator__c</fullName>
    <description>This field stores the operator of ST criteria condition.</description>
    <label>Operator</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>