force-app/main/default/objects/BMCServiceDesk__Service_Target_Criteria__c/fields/BMCServiceDesk__Order_Index__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Order_Index__c</fullName>
    <description>This field stores the order/sequence of ST criteria condtions.</description>
    <label>Order Index</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>