force-app/main/default/objects/BMCServiceDesk__Service_Target_Criteria__c/fields/BMCServiceDesk__ST_Criteria_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ST_Criteria_Type__c</fullName>
    <description>This field stores type of the condition
0 - ST Criteria condition
1 - Clock start condition
2 - Clock stop condition
3 - Clock pause condition</description>
    <label>ST Criteria Type</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>